Designed payment status page

--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -22,6 +22,9 @@
 .text-green {
     color: #27c727;
 }
+.shadow-theme {
+    box-shadow: 0px 3px 6px #24599126;
+}
 .main-card .col-form-label,
 .main-card .form-check-label {
     font-size: .95rem;
@@ -1426,5 +1429,74 @@ table.event_table {
     .cardGradient .card .card-body.card-purple {
         background-image: linear-gradient(135deg, #F482ED 0%, #727CFE 100%);
         box-shadow: 0px 7px 7px #727CFE55;
+    }
+
+.input-group-prepend {
+    margin-right: -1px;
+}
+.dash_filter .input-group .input-group-text {
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-right: none;
+    font-size: 0.85rem;
+    padding: 6px 10px;
+    color: #37597d;
+    font-weight: 600;
+    border-radius: 0.25rem;
+}
+.dash_filter .input-group .form-control {
+    border-left: none !important;
+    margin-bottom: 0 !important;
+}
+.dash_filter .form-control {
+    box-shadow: none !important;
+    border: 1px solid #ced4da;
+    font-size: 0.85rem !important;
+    padding: 6px 10px;
+    border-radius: 0.25rem;
+}
+
+.paymentCards .card {
+    font-size: .82rem;
+    box-shadow: 0px 3px 6px #24599126;
+    border-radius: 6px;
+}
+.paymentCards .card p {
+    margin-bottom: 2px;
+    color: #777474;
+}
+.paymentCards .card p.fw-bold {
+    color: #000000;
+}
+.paymentCards .card img {
+    width: 14px;
+}
+.btn-outline-warning.btn-orange-o {
+    position: relative;
+    border-color: #FC893C;
+    color: var(--main-color);
+    font-weight: 600;
+    font-size: .85rem;
+}
+.btn-outline-warning.btn-orange-o:hover {
+    background: #ffa161;
+}
+    .btn-outline-warning.btn-orange-o::before {
+        position: absolute;
+        content: '';
+        width: 150%;
+        height: 1px;
+        background: #FC893C;
+        right: 100%;
+        top: 50%;
+    }
+    .btn-outline-warning.btn-orange-o::after {
+        position: absolute;
+        content: '';
+        width: 150%;
+        height: 1px;
+        background: #FC893C;
+        left: 100%;
+        top: 50%;
     }
 /*PaymentStatus.aspx css end here*/
