Design new page for EventCreation.aspx

--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -40,8 +40,10 @@
                                     </a>
                                     <div class="sidebar-submenu">
                                         <ul>
-                                            <li><a href="eAuctionParticipate.aspx">Profile</a></li>
-                                            <li><a href="eAuctionPlotProfile.aspx">Change Password</a></li>
+                                            <li><a href="SellerProfile.aspx">Profile</a></li>
+                                            <li><a href="SellerEditProfile.aspx">Edit Profile</a></li>
+                                            <li><a href="ChangePassword.aspx">Change Password</a></li>
+                                            <li><a href="EventCreation.aspx">Event Creation</a></li>
                                             
                                         </ul>
                                     </div>
