Designed new page for EventList.aspx

--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -46,6 +46,7 @@
                                             <li><a href="EventCreation.aspx">Event Creation</a></li>
                                             <li><a href="SellerAgreement.aspx">Seller Agreement</a></li>
                                             <li><a href="SellerAgreementDocumentList.aspx">Seller Doc. List</a></li>
+                                            <li><a href="EventList.aspx">Event List</a></li>
                                             
                                         </ul>
                                     </div>
