--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -47,7 +47,8 @@
                                             <li><a href="SellerAgreement.aspx">Seller Agreement</a></li>
                                             <li><a href="SellerAgreementDocumentList.aspx">Seller Doc. List</a></li>
                                             <li><a href="EventList.aspx">Event List</a></li>
-                                            
+                                            <li><a href="AuctionReport.aspx">Auction Report</a></li>
+                                            <li><a href="DocumentVerificationList.aspx">Document Verification List</a></li>
                                         </ul>
                                     </div>
                                 </li>
