--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -121,6 +121,7 @@
                     </div>
                 </div>
             </nav>
+            
             <main class="page-content">
                 <div class="container-fluid" id="topbar">
                     <div class="row shadow-sm">
@@ -173,7 +174,12 @@
                         </div>
                     </div>
                 </div>
+               
                 <div class="row main-content">
+                    <div class="col-md-12 text-end"  id="topbtngroup">
+                        <button type="button" data-button="cancel" id="btnClear" class="btn mx-2 dept_submit pt-2"><i class="fa fa-times"></i>Clear</button>
+                        <button type="button" id="btnSave" class="btn dept_submit pt-2" data-bs-toggle="modal" data-bs-target="#submitModal"><i class="fa fa-sign-out-alt"></i><span class="font-weight-normal">Submit</span></button>
+                    </div>
                     <div class="col-sm-12">
                         <div class="content">
                             <asp:ContentPlaceHolder ID="content" runat="server"></asp:ContentPlaceHolder>
