--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -39,6 +39,9 @@
 .fw-500 {
     font-weight: 500 !important;
 }
+.fs-7 {
+    font-size: .85rem !important;
+}
 .btn-green {
     color: #fff;
     background-color: #24BE9E;
@@ -104,7 +107,7 @@
     top: 0;
     width: calc(100vw - 80px);
     background-color: #fff;
-    z-index: 1;
+    z-index: 3;
 }
 
     #topbar .navbar-brand {
