--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -69,6 +69,7 @@
                                             <li><a href="HideBidderSeller.aspx">Hide Bidder Seller</a></li>
                                             <li><a href="SellerRegistration.aspx">Seller Registration</a></li>
                                             <li><a href="ManageTemplateMessage.aspx">Manage Template Message</a></li>
+                                            <li><a href="PostAuctionLinks.aspx">Post Auction Links</a></li>
                                         </ul>
                                     </div>
                                 </li>
