--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -77,7 +77,8 @@
                                             <li><a href="BidHistory.aspx">Bid History</a></li>
                                             <li><a href="MessageSendToAll.aspx">Message Send To All</a></li>
                                             <li><a href="BidderAgreementReport.aspx">Bidder Agreement Report</a></li>
-                                            <li><a href="dd.aspx">age</a></li>
+                                            <li><a href="ScreenDuringAuction.aspx">Screen During Auction</a></li>
+                                            <li><a href="AuctionReset.aspx">Auction Reset</a></li>
                                         </ul>
                                     </div>
                                 </li>
