--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -79,6 +79,7 @@
                                             <li><a href="BidderAgreementReport.aspx">Bidder Agreement Report</a></li>
                                             <li><a href="ScreenDuringAuction.aspx">Screen During Auction</a></li>
                                             <li><a href="AuctionReset.aspx">Auction Reset</a></li>
+                                            <li><a href="LastMinutesAutoExtension.aspx">Last Minutes Auto Extension</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -145,7 +146,6 @@
                                         <span class="menu-text">Login</span>
                                     </a>
                                 </li>
-
                             </ul>
                         </div>
                     </div>
